gateway/fv/testdata/lds-not-blocking.yaml
resources:
- "@type": type.googleapis.com/envoy.config.listener.v3.Listener
  name: listener_0
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8000
  filter_chains:
  - filters:
      name: envoy.filters.network.http_connection_manager
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        stat_prefix: ingress_http
        route_config:
          name: local_route
          virtual_hosts:
          - name: upstream
            domains:
            - "*"
            routes:
            - match:
                prefix: "/"
              route:
                cluster: upstream-service
        http_filters:
        - name: envoy.filters.http.ext_proc
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
            grpc_service:
              envoy_grpc:
                cluster_name: ext_proc-grpc-service
              timeout: 10s
              initial_metadata:
              - key: directivesJson
                value: "[\"Include @coraza.conf-recommended\", \"Include @crs-setup.conf.example\", \"SecAction \\\"id:900120,phase:1,pass,t:none,nolog,tag:'OWASP_CRS',ver:'OWASP_CRS/4.14.0',setvar:tx.early_blocking=1\\\"\", \"Include @owasp_crs/*.conf\", \"SecRuleEngine DetectionOnly\"]"
            processing_mode:
              request_header_mode: SEND
              response_header_mode: SEND
              request_body_mode: STREAMED
              request_trailer_mode: SKIP
              response_trailer_mode: SKIP
            failure_mode_allow: false
            request_attributes: ["request.protocol", "xds.route_name"]
        - name: envoy.filters.http.router
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
