gateway/fv/testdata/test-config.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: upstream
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: upstream-service
          http_filters:
          - name: envoy.filters.http.ext_proc
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
              "grpc_service": {
                "envoy_grpc": {
                  "cluster_name": "ext_proc-grpc-service"
                },
                "timeout": "10s",
                "initial_metadata": [
                  {
                    "key": "my-custom-setting",
                    "value": "some_value 3"
                  }
                ]
              }
              "processing_mode": {
                "request_header_mode": "SEND",
                "response_header_mode": "SEND",
                "request_body_mode": "STREAMED",
                "request_trailer_mode": "SKIP",
                "response_trailer_mode": "SKIP"
              }
              failure_mode_allow: false
              request_attributes: ["request.protocol", "xds.route_name"]
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: upstream-service
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: upstream-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8088

  - name: ext_proc-grpc-service
    type: STATIC
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: ext_proc-grpc-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 9002
